// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContractorBanner Rendering should match snapshot with null user 1`] = `
<View
  colors={
    [
      "#0F766E",
      "#0D9488",
      "#0891B2",
    ]
  }
  end={
    {
      "x": 1,
      "y": 1,
    }
  }
  start={
    {
      "x": 0,
      "y": 0,
    }
  }
  style={
    {
      "borderRadius": 20,
      "elevation": 8,
      "marginBottom": 8,
      "marginTop": 16,
      "minHeight": 176,
      "overflow": "hidden",
      "padding": 24,
      "shadowColor": "#0F766E",
      "shadowOffset": {
        "height": 8,
        "width": 0,
      },
      "shadowOpacity": 0.35,
      "shadowRadius": 16,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "rgba(255,255,255,0.07)",
        "borderRadius": 100,
        "height": 200,
        "position": "absolute",
        "right": -50,
        "top": -70,
        "width": 200,
      }
    }
  />
  <View
    style={
      {
        "backgroundColor": "rgba(255,255,255,0.05)",
        "borderRadius": 55,
        "bottom": -35,
        "height": 110,
        "left": 10,
        "position": "absolute",
        "width": 110,
      }
    }
  />
  <View
    style={
      {
        "zIndex": 1,
      }
    }
  >
    <Text
      style={
        {
          "color": "rgba(255,255,255,0.75)",
          "fontSize": 13,
          "fontWeight": "500",
          "letterSpacing": 0.3,
          "marginBottom": 4,
        }
      }
    >
      Good morning
    </Text>
    <Text
      numberOfLines={1}
      style={
        {
          "color": "#FFFFFF",
          "fontSize": 26,
          "fontWeight": "700",
          "letterSpacing": -0.3,
          "marginBottom": 14,
        }
      }
    >
      Contractor
    </Text>
    <View
      style={
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "gap": 8,
          "marginBottom": 20,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "rgba(255,255,255,0.15)",
            "borderRadius": 20,
            "flexDirection": "row",
            "gap": 5,
            "paddingHorizontal": 10,
            "paddingVertical": 5,
          }
        }
      >
        <Ionicons
          color="rgba(255,255,255,0.9)"
          name="briefcase-outline"
          size={13}
        />
        <Text
          style={
            {
              "color": "rgba(255,255,255,0.95)",
              "fontSize": 12,
              "fontWeight": "500",
            }
          }
        >
          0
           active 
          jobs
        </Text>
      </View>
    </View>
    <TouchableOpacity
      accessibilityLabel="Browse available jobs"
      accessibilityRole="button"
      activeOpacity={0.85}
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 12,
          "elevation": 2,
          "flexDirection": "row",
          "gap": 6,
          "paddingHorizontal": 18,
          "paddingVertical": 11,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 4,
        }
      }
    >
      <Text
        style={
          {
            "color": "#0D9488",
            "fontSize": 14,
            "fontWeight": "700",
          }
        }
      >
        Browse Available Jobs
      </Text>
      <Ionicons
        color="#0D9488"
        name="arrow-forward"
        size={15}
      />
    </TouchableOpacity>
  </View>
</View>
`;

exports[`ContractorBanner Rendering should match snapshot with valid user 1`] = `
<View
  colors={
    [
      "#0F766E",
      "#0D9488",
      "#0891B2",
    ]
  }
  end={
    {
      "x": 1,
      "y": 1,
    }
  }
  start={
    {
      "x": 0,
      "y": 0,
    }
  }
  style={
    {
      "borderRadius": 20,
      "elevation": 8,
      "marginBottom": 8,
      "marginTop": 16,
      "minHeight": 176,
      "overflow": "hidden",
      "padding": 24,
      "shadowColor": "#0F766E",
      "shadowOffset": {
        "height": 8,
        "width": 0,
      },
      "shadowOpacity": 0.35,
      "shadowRadius": 16,
    }
  }
>
  <View
    style={
      {
        "backgroundColor": "rgba(255,255,255,0.07)",
        "borderRadius": 100,
        "height": 200,
        "position": "absolute",
        "right": -50,
        "top": -70,
        "width": 200,
      }
    }
  />
  <View
    style={
      {
        "backgroundColor": "rgba(255,255,255,0.05)",
        "borderRadius": 55,
        "bottom": -35,
        "height": 110,
        "left": 10,
        "position": "absolute",
        "width": 110,
      }
    }
  />
  <View
    style={
      {
        "zIndex": 1,
      }
    }
  >
    <Text
      style={
        {
          "color": "rgba(255,255,255,0.75)",
          "fontSize": 13,
          "fontWeight": "500",
          "letterSpacing": 0.3,
          "marginBottom": 4,
        }
      }
    >
      Good morning
    </Text>
    <Text
      numberOfLines={1}
      style={
        {
          "color": "#FFFFFF",
          "fontSize": 26,
          "fontWeight": "700",
          "letterSpacing": -0.3,
          "marginBottom": 14,
        }
      }
    >
      John Smith
    </Text>
    <View
      style={
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "gap": 8,
          "marginBottom": 20,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "rgba(255,255,255,0.15)",
            "borderRadius": 20,
            "flexDirection": "row",
            "gap": 5,
            "paddingHorizontal": 10,
            "paddingVertical": 5,
          }
        }
      >
        <Ionicons
          color="rgba(255,255,255,0.9)"
          name="briefcase-outline"
          size={13}
        />
        <Text
          style={
            {
              "color": "rgba(255,255,255,0.95)",
              "fontSize": 12,
              "fontWeight": "500",
            }
          }
        >
          0
           active 
          jobs
        </Text>
      </View>
    </View>
    <TouchableOpacity
      accessibilityLabel="Browse available jobs"
      accessibilityRole="button"
      activeOpacity={0.85}
      style={
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 12,
          "elevation": 2,
          "flexDirection": "row",
          "gap": 6,
          "paddingHorizontal": 18,
          "paddingVertical": 11,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 4,
        }
      }
    >
      <Text
        style={
          {
            "color": "#0D9488",
            "fontSize": 14,
            "fontWeight": "700",
          }
        }
      >
        Browse Available Jobs
      </Text>
      <Ionicons
        color="#0D9488"
        name="arrow-forward"
        size={15}
      />
    </TouchableOpacity>
  </View>
</View>
`;
